--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         crossorigin="anonymous"></script>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">NowSoft</a>
+        <a class="navbar-brand" href="/Nowsoft/">NowSoft</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -35,30 +35,30 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item ">
-                    <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/about.html">About Us</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Services
-                    </a>
-                    <div class="dropdown-menu bg-success" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item text-light" href="/graphic.html">Graphic Designing</a>
-                        <a class="dropdown-item text-light" href="/product.html">Customised Products</a>
-                        <a class="dropdown-item text-light" href="/printing.html">Printing</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item text-light" href="/cart.html">Cart</a>
-                        <a class="dropdown-item text-light" href="/track.html">Track Order</a>
-                    </div>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/contact.html">Contact Us</a>
-                </li>
-            </ul>
+        <li class="nav-item active">
+          <a class="nav-link" href="Nowsoft/">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/Nowsoft/about.html">About Us</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Services
+          </a>
+          <div class="dropdown-menu bg-success" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item text-light" href="/graphic.html">Graphic Designing</a>
+            <a class="dropdown-item text-light" href="/product.html">Customised Products</a>
+            <a class="dropdown-item text-light" href="/printing.html">Printing</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item text-light" href="/cart.html">Cart</a>
+            <a class="dropdown-item text-light" href="/track.html">Track Order</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/Nowsoft/contact.html">Contact Us</a>
+        </li>
+      </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn bg-success my-2 my-sm-0 text-light" type="submit">Search</button>
